# Yodaka

./: .gitignore  Makefile  README.md  requirements.txt
fixtures/: reply_resolution.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: app-bootstrap.js
frontend/src/: index.css  main.tsx  vite-env.d.ts
frontend/src/app/: App.tsx  types.ts
frontend/src/components/: AppToolbar.tsx  ComposerPanel.tsx  EmojiRevolverDialog.tsx  EventJsonDialog.tsx  KeyMinerPanel.tsx  ManualPubkeyDialog.tsx  RelaySettingItem.tsx  RelaySettingsMenu.tsx  SignerDialog.tsx  StatusCard.tsx  TimelineCard.tsx  TimelinePanel.tsx
frontend/src/hooks/: useAccountTimeline.ts  useContentEventPreviewCache.ts  useFocusedEventRoute.ts  useFollowTimeline.ts  useKeyMinerPanel.ts  useManualPubkeyDialog.ts  useNotifyTimeline.test.ts  useNotifyTimeline.ts  usePublish.ts  useReactionTimeline.ts  useRelayBootstrap.ts  useReplyPreviewCache.test.ts  useReplyPreviewCache.ts  useSignerPubkey.ts  useTemporaryRelayTransport.ts
frontend/src/lib/miner/: affix.test.ts  affix.ts  batchSize.test.ts  batchSize.ts  estimate.test.ts  estimate.ts  launch.test.ts  launch.ts  wasm.ts  webgpu.ts  webgpuMiner.wgsl
frontend/src/lib/nostr/: avatar.test.ts  avatar.ts  cache.test.ts  cache.ts  contacts.test.ts  contacts.ts  contentReferences.test.ts  contentReferences.ts  directRelayFallback.ts  eventDebug.test.ts  eventDebug.ts  eventRoute.test.ts  eventRoute.ts  nip19.test.ts  nip19.ts  profile.test.ts  profile.ts  profileLookup.test.ts  profileLookup.ts  profilePresentation.test.ts  profilePresentation.ts  pubkey.ts  publish.test.ts  publish.ts  reaction.test.ts  reaction.ts  relay.ts  (+24 more)
rust/: Cargo.toml
rust/crates/nostr_core/: Cargo.toml
rust/crates/nostr_core/src/: error.rs  lib.rs  physics.rs  signer.rs  timeline.rs
rust/crates/nostr_miner_core/: Cargo.toml
rust/crates/nostr_miner_core/src/: error.rs  lib.rs
rust/crates/nostr_miner_wasm/: Cargo.toml
rust/crates/nostr_miner_wasm/src/: lib.rs
rust/crates/nostr_physics_wasm/: Cargo.toml
rust/crates/nostr_physics_wasm/src/: lib.rs
rust/crates/nostr_wasm/: Cargo.toml  LICENSE
rust/crates/nostr_wasm/src/: lib.rs
semgrep/: xss.yml
tools/sampling/: README.md  collect_follow_list.py  collect_relay_sample.py  fetch_nevent.py
(+12 files in other folders)
