[package]
name = "nostr_miner_wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nostr_miner_core = { path = "../nostr_miner_core" }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
